<resources>
    <string name="app_name">Nutriplay</string>
    <string name="text_user">Usuario</string>
    <string name="text_contraseña">Contraseña</string>
    <string name="button_registrarse">Registrarse</string>
    <string name="button_iniciar_sesion">Iniciar Sesion</string>
    <string name="text_genero">Genero</string>
    <string name="text_edad">Edad</string>
    <string name="text_peso">Peso</string>
    <string name="text_estatura">Estatura</string>
    <string name="text_actividad_fisica">Actividad fisica</string>
    <string name="text_frecuencia_actividad">Frecuencia de actividad</string>
    <string name="button_perfil">Perfil</string>
    <string name="button_juego">Juegos</string>
    <string name="button_actividad_fisica">Act. Fisica</string>
    <string name="button_editar">Editar</string>
    <string name="button_guardar">Guardar</string>
    <string name="button_cerrar_sesion">Cerrar Sesion</string>
    <string name="button_menu">Menu</string>
    <string name="button_jugar">Jugar</string>

    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aram Boiso</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_games">Juegos</string>
    <string name="menu_py_ac">Actividad Física</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="text_banda">Juego de la banda</string>
    <string name="text_instrucciones_banda">1. Identificar el grupo de alimento para alimentar al fantasmita.\n
2. Arrastrar el alimento a la boca del fantasmita.</string>
    <string name="text_rompecabezas">Juego de rompecabeza</string>
    <string name="text_instrucciones_rompecabezas">1. Identificar el grupo de alimento.\n
2. Arrastrar el alimento al plato correspondiente.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>