<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/gamesFragment2"
            android:icon="@drawable/ic_baseline_videogame_asset_24"
            android:title="@string/menu_games" />
        <item
            android:id="@+id/physicalActivityFragment"
            android:icon="@drawable/ic_baseline_directions_run_24"
            android:title="@string/menu_py_ac" />
    </group>
</menu>