<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_3"
    tools:context=".ProfileFragment">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/coiny"
        android:gravity="center_horizontal"
        android:text="@string/menu_profile"
        android:textColor="@color/teal_200"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etGenero"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#22FFFFFF"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textColor="@color/teal_200"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/coiny"
        android:layout_marginStart="20sp"
        android:textSize="16sp"
        android:layout_marginTop="0dp"
        android:text="@string/text_genero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#22ffffff"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textColor="@color/teal_200"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/coiny"
        android:layout_marginStart="20sp"
        android:textSize="16sp"
        android:layout_marginTop="14dp"
        android:text="@string/text_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGenero" />

    <EditText
        android:id="@+id/etFrecFisica"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:background="#22ffffff"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textColor="@color/teal_200"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <EditText
        android:id="@+id/etActFisica"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:background="#22ffffff"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textColor="@color/teal_200"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/coiny"
        android:layout_marginStart="20sp"
        android:textSize="16sp"
        android:layout_marginTop="14dp"
        android:text="@string/text_estatura"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPeso" />

    <EditText
        android:id="@+id/etEstatura"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:background="#22ffffff"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textColor="@color/teal_200"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="370dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="#22ffffff"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:textColor="@color/teal_200"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView26" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/coiny"
        android:layout_marginStart="20sp"
        android:textSize="16sp"
        android:layout_marginTop="14dp"
        android:text="@string/text_actividad_fisica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEstatura" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/coiny"
        android:layout_marginStart="20sp"
        android:textSize="16sp"
        android:layout_marginTop="14dp"
        android:text="@string/text_peso"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEdad" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/teal_200"
        android:fontFamily="@font/coiny"
        android:layout_marginStart="20sp"
        android:textSize="16sp"
        android:layout_marginTop="14dp"
        android:text="@string/text_frecuencia_actividad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etActFisica" />

</androidx.constraintlayout.widget.ConstraintLayout>